--- a/chrome.css
+++ b/chrome.css
@@ -1,6 +1,7 @@
 /* Remove border padding */
 :root:not([inDOMFullscreen="true"]):not([chromehidden~="location"]):not([chromehidden~="toolbar"]) {
   & #tabbrowser-tabbox #tabbrowser-tabpanels .browserSidebarContainer  {
+    margin: 0
     border-radius: 0 !important;
   }
 }
