Fixed when padding appears in fullscreen.

--- a/chrome.css
+++ b/chrome.css
@@ -7,17 +7,8 @@
 }
 
 @media (-moz-bool-pref: "zen.view.compact") {
-  :root:not([inDOMFullscreen="true"]) #tabbrowser-tabpanels {
-    padding-left: 0 !important;
-    padding-top: 0 !important;
-    padding-right: 0 !important;
-    padding-bottom: 0 !important;
-  }
-}
-
-@media (-moz-bool-pref: "zen.view.compact") {
   @media (-moz-bool-pref: "zen.view.compact.hide-toolbar") {
-    :root:not([inDOMFullscreen="true"]) #tabbrowser-tabpanels {
+    :root:not([inDOMFullscreen="true"]) #tabbrowser-tabpanels, #tabbrowser-tabpanels {
       padding-left: 0 !important;
       padding-top: 0 !important;
       padding-right: 0 !important;
